Update header bar to reflect where @davidmcdowell wants the links to go
Notes:

* The 'home' link should actually be a 'house' icon: http://pq359h.axshare.com/#p=0_0_home
* The 'about' link (https://mem.thegulocal.com/about) currently 404s, but
  should show something like this: http://pq359h.axshare.com/#p=2_0_about_membership
* 'pricing' is another link to https://membership.theguardian.com/join, ie http://pq359h.axshare.com/#p=4_0_join_today

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -56,14 +56,20 @@
             <div class="header__primary">
                 <ul class="inline-list">
                     <li class="inline-list__item nav__item">
+                        <a href="/" class="nav__link">home</a>
+                    </li>
+                    <li class="inline-list__item nav__item">
                         <a href="/events" class="nav__link">events</a>
                     </li>
                     @if(!Config.membershipHide) {
                         <li class="inline-list__item nav__item">
-                            <a href="/join" class="nav__link">about membership</a>
+                            <a href="/about" class="nav__link">about membership</a>
                         </li>
                         <li class="inline-list__item nav__item">
                             <a href="/join/patron" class="nav__link">patrons</a>
+                        </li>
+                        <li class="inline-list__item nav__item">
+                            <a href="/join" class="nav__link">pricing</a>
                         </li>
                     }
                 </ul>
