Pay now, join now!

--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -47,7 +47,7 @@
                 @fragments.form.billingAddressCTA()
                 @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true)
                 @fragments.form.cardDetail()
-                @fragments.form.submit("Join now")
+                @fragments.form.submit("Pay now")
             </form>
 
         </section>
