Point patron link on the homepage to the right place

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -57,7 +57,7 @@
                 <h2 class="section-headline section-headline--border-bottom">Membership fuels our journalism</h2>
                 <blockquote>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
                 <p class="brochure-container__copy">Guardian Membership is the community for those who share this ideal.</p>
-                <a class="action action--join" href="/events">Start your journey as patron</a>
+                <a class="action action--join" href="@routes.Joiner.patron">Start your journey as patron</a>
             </div>
         </div>
     </div>
