--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -15,10 +15,8 @@
     @for(
         ebIframeUrl <- ebIframeUrlOpt
     ) {
-
-        <iframe src="@ebIframeUrl" frameborder="0" height="340" width="100%" vspace="0" hspace="0" marginheight="5"
+        <iframe src="@ebIframeUrl" width="100%" height="431px" frameborder="0" vspace="0" hspace="0" marginheight="5"
         marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
-
     }
 
     <div class="separator"></div>
