updated arguments in views to accepttuple from getEbIFrameDetail imported IFrame view.support

--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -1,4 +1,6 @@
-@(ebIframeUrlOpt: Option[String])
+@(ebIFrameDetail: Option[(String, Int)])
+
+@import views.support.IFrame
 
 @main("Thankyou | Friend") {
 
