--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -1,4 +1,4 @@
-@()(implicit token: play.filters.csrf.CSRF.Token)
+@(userFields: model.PrivateFields)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import configuration.Config
 @import helper._
@@ -12,7 +12,7 @@
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-address-form">
         @CSRF.formField
         @fragments.form.errorMessageDisplay()
-        @fragments.form.nameDetail()
+        @fragments.form.nameDetail(userFields.firstName, userFields.secondName)
         @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", false)
         @fragments.form.submit("Join now")
     </form>
