Remove Masterclasses switch and other gumph we no longer need
We are Membership only at this point.

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -26,7 +26,7 @@
 
     <div class="brochure-container brochure-container--promo-one">
         <div class="brochure-container__inner">
-            <h2 class="section-headline section-headline--border-bottom">Introducing Guardian @if(Config.membershipHide){Masterclasses}else{Membership}</h2>
+            <h2 class="section-headline section-headline--border-bottom">Introducing Guardian Membership</h2>
             <p class="brochure-container__copy">We believe the <strong>open exchange</strong> of information, ideas and opinions has the power to <strong>change the world for the better</strong></p>
             <p class="brochure-container__copy">Guardian Membership is the community for those who share this ideal.</p>
             <a class="action action--join" href="#">Learn more</a>
