--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -59,7 +59,7 @@
                     <span class="tickets-select-form__price">@Config.benefits(Tier.Patron).priceText</span>
                 </label>
 
-                <input type="submit" class="submit-input action--logged-in" value="Choose"/>
+                <input type="submit" class="submit-input action--logged-in" value="Join today"/>
 
             </form>
         </section>@*
