screw you, safari

--- a/frontend/app/views/fragments/unsupportedBrowser.scala.html
+++ b/frontend/app/views/fragments/unsupportedBrowser.scala.html
@@ -4,7 +4,7 @@
     <img src="@Asset.at("images/logo-plain.png")" class="browser-upgrade-msg__logo" />
     <div class="browser-upgrade-msg__box">
         <h3 class="browser-upgrade-msg__header">Sorry, your browser is not supported</h3>
-        <p class="browser-upgrade-msg__subheader">To use Guardian Membership we recommend using the latest version of <a href="http://support.apple.com/downloads/#safari">Safari</a>, <a href="http://www.getfirefox.com">Firefox</a> or <a href="http://www.google.com/chrome">Chrome</a>.</p>
+        <p class="browser-upgrade-msg__subheader">To use Guardian Membership we recommend using the latest version of <a href="http://www.google.com/chrome">Chrome</a>, <a href="http://www.getfirefox.com">Firefox</a> or <a href="http://support.apple.com/downloads/#safari">Safari</a>.</p>
         <p>If none of those browsers are available then please contact our Customer Services Team.</p>
         <div class="browser-upgrade-msg__help">
             <div class="browser-upgrade-msg__help__item browser-upgrade-msg__help__item--divider">
