--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -1,4 +1,4 @@
-@(targetTier: com.gu.membership.salesforce.Tier.Tier)(implicit token: play.filters.csrf.CSRF.Token)
+@(targetTier: com.gu.membership.salesforce.Tier.Tier, userFields: model.PrivateFields)(implicit token: play.filters.csrf.CSRF.Token)
 @import helper._
 
 @main("Upgrade Payment") {
@@ -8,10 +8,10 @@
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form" data-change-to-tier="@targetTier">
         @CSRF.formField
         @fragments.form.errorMessageDisplay()
-        @fragments.form.addressDetail("Delivery address", "Where we'll send your welcome pack", "deliveryAddress", true)
+        @fragments.form.addressDetail("Delivery address", "Where we'll send your welcome pack", "deliveryAddress", true, userFields.address1)
         @fragments.form.cardDetail()
         @fragments.form.billingAddressCTA()
-        @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true)
+        @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true, userFields.billingAddress1)
         @fragments.form.paymentOptions(targetTier)
         @fragments.form.submit("Join now")
 
