--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -1,4 +1,6 @@
-@(heading: String, note: String, formType: String, addressRequired: Boolean = true, address1: Option[String])
+@(heading: String, note: String, formType: String, addressRequired: Boolean = true,
+address1: Option[String], address2: Option[String], town: Option[String], postcode: Option[String],
+county: Option[String])
 
 @import model.Countries
 
@@ -17,9 +19,9 @@
                 <label class="label" for="address-line-one-@(formType)">Address line 1</label>
                 <input type="text"
                        name="@(formType).lineOne"
+                       value="@address1"
                        id="address-line-one-@(formType)"
                        class="text-input text-input--block js-address-line-one"
-                       value="@address1"
                        data-error-message="Please enter your @heading.toLowerCase() first line"
                        @if(addressRequired == true){data-validation="required"} />
             </div>
@@ -28,6 +30,7 @@
                 <label class="label" for="address-line-two-@(formType)">Address line 2</label>
                 <input type="text"
                        name="@(formType).lineTwo"
+                       value="@address2"
                        id="address-line-two-@(formType)"
                        class="text-input text-input--block js-address-line-two"/>
             </div>
@@ -36,6 +39,7 @@
                 <label class="label" for="town-@(formType)">Town</label>
                 <input type="text"
                        name="@(formType).town"
+                       value="@town"
                        id="town-@(formType)"
                        class="text-input text-input--block js-town"
                        data-error-message="Please enter your @heading.toLowerCase() town"
@@ -46,6 +50,7 @@
                 <label class="label" for="postCode-@(formType)">Post code</label>
                 <input type="text"
                        name="@(formType).postCode"
+                       value="@postcode"
                        id="postCode-@(formType)"
                        class="text-input text-input--block js-post-code"
                        data-error-message="Please enter your @heading.toLowerCase() post code"
@@ -56,6 +61,7 @@
                 <label class="label" for="county-or-state-@(formType)">County or State</label>
                 <input type="text"
                        name="@(formType).countyOrState"
+                       value="@county"
                        id="county-or-state-@(formType)"
                        class="text-input text-input--block js-county-state"/>
             </div>
