--- a/frontend/assets/stylesheets/pages/_tier.scss
+++ b/frontend/assets/stylesheets/pages/_tier.scss
@@ -95,6 +95,7 @@ $current-indicator: rem(47px);
     @include rem((
         padding: $gs-gutter/2 0 $gs-gutter
     ));
+    margin-bottom: 0;
     > li {
         list-style-position: inside;
         list-style: none;
@@ -103,11 +104,19 @@ $current-indicator: rem(47px);
         ));
         @include faux-bullet-point(#333333, $right-space: 4px);
 
+        &:last-child {
+            margin-bottom: 0;
+        }
+
     }
 }
 
 .package__price {
     @include fs-headline(6);
+    display: block;
+    @include rem((
+        margin-bottom: 20px
+    ));
 }
 
 .package__pcm {
